Change site title

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Convert webpage to e-book (ePUB)</title>
+    <title>Convert webpage to ePUB</title>
     <meta
       name="description"
       content="Adjust and convert a public webpage to ePUB format." />
@@ -25,7 +25,7 @@
   <body>
     <div class="container">
       <div>
-        <h1>Convert webpage to e-book (ePUB)</h1>
+        <h1>Convert webpage to ePUB</h1>
         <p class="center">
           Adjusting the webpage, removing content from original webpage like
           forms, videos, audios, frames, scripts and styles, trying to improve
