--- a/index.html
+++ b/index.html
@@ -21,6 +21,11 @@
     <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5" />
     <meta name="msapplication-TileColor" content="#00a300" />
     <meta name="theme-color" content="#ffffff" />
+    <script>
+      if ('serviceWorker' in navigator) {
+        navigator.serviceWorker.register('ws.js');
+      }
+    </script>
   </head>
   <body>
     <div class="container">
