Change page description

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Convert webpage to ePUB</title>
     <meta
       name="description"
-      content="Adjust and convert a public webpage to ePUB format." />
+      content="Effortlessly convert webpage URLs into a clean and readable ePUB for offline reading with our intuitive software. Simplify content consumption with our intuitive tool." />
     <meta name="keywords" content="epub,page-to-epub,html-to-epub" />
     <link rel="stylesheet" href="css/normalize.min.css" />
     <link rel="stylesheet" href="css/milligram.min.css" />
