Add social open graph meta tags

--- a/index.html
+++ b/index.html
@@ -5,10 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Convert webpage to ePUB</title>
-    <meta
-      name="description"
-      content="Effortlessly convert webpage URLs into a clean and readable ePUB for offline reading with our intuitive software. Simplify content consumption with our intuitive tool." />
+    <meta name="description" content="Effortlessly convert webpage URLs into a clean and readable ePUB for offline reading with our intuitive software. Simplify content consumption with our intuitive tool." />
     <meta name="keywords" content="epub,page-to-epub,html-to-epub" />
+    <meta property="og:title" content="Convert webpage to ePUB" />
+    <meta property="og:description" content="Effortlessly convert webpage URLs into a clean and readable ePUB for offline reading with our intuitive software." />
+    <meta property="og:image" content="https://webpagetoepub.github.io/img/og_image.png" />
+    <meta property="og:url" content="https://webpagetoepub.github.io/" />
     <link rel="stylesheet" href="css/normalize.min.css" />
     <link rel="stylesheet" href="css/milligram.min.css" />
     <link rel="stylesheet" href="css/style.css" />
