--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Convert webpage to ePUB</title>
+    <title>Convert webpage to EPUB</title>
     <meta name="description" content="Easily convert any webpage to an EPUB file with our free online tool. Just paste the URL and download your EPUB for offline reading on any device." />
     <meta name="keywords" content="epub,page-to-epub,html-to-epub" />
-    <meta property="og:title" content="Convert webpage to ePUB" />
+    <meta property="og:title" content="Convert webpage to EPUB" />
     <meta property="og:description" content="Easily convert any webpage to an EPUB file with our free online tool. Just paste the URL and download your EPUB for offline reading on any device." />
     <meta property="og:image" content="https://webpagetoepub.github.io/img/og_image.png" />
     <meta property="og:url" content="https://webpagetoepub.github.io/" />
@@ -32,11 +32,11 @@
   <body>
     <div class="container">
       <div>
-        <h1>Convert webpage to ePUB</h1>
+        <h1>Convert webpage to EPUB</h1>
         <p class="center">
           Adjusting the webpage, removing content from original webpage like
           forms, videos, audios, frames, scripts and styles, trying to improve
-          the readability on ePUB readers.
+          the readability on EPUB readers.
         </p>
       </div>
       <div class="row">
@@ -52,7 +52,7 @@
                 placeholder="https://www.example.com/" />
             </div>
             <div class="center">
-              <button type="submit">Download page on ePUB format</button>
+              <button type="submit">Download page on EPUB format</button>
             </div>
           </form>
           <progress id="progress"></progress>
