--- a/index.html
+++ b/index.html
@@ -57,8 +57,6 @@
         </main>
       </div>
     </div>
-    <script src="js/jszip.min.js"></script>
-    <script src="js/ejs.min.js"></script>
-    <script src="js/main.js"></script>
+    <script src="js/script.min.js"></script>
   </body>
 </html>
