--- a/index.src.html
+++ b/index.src.html
@@ -21,11 +21,6 @@
     <link rel="mask-icon" href="/img/safari-pinned-tab.svg" color="#5bbad5" />
     <meta name="msapplication-TileColor" content="#00a300" />
     <meta name="theme-color" content="#ffffff" />
-    <script>
-      if ('serviceWorker' in navigator) {
-        navigator.serviceWorker.register('ws.js');
-      }
-    </script>
   </head>
   <body>
     <div class="container">
@@ -58,5 +53,10 @@
       </div>
     </div>
     <script src="js/script.min.js"></script>
+    <script>
+      if ('serviceWorker' in navigator) {
+        window.addEventListener('load', () => navigator.serviceWorker.register('ws.js'));
+      }
+    </script>
   </body>
 </html>
