Set a canonical URL

--- a/index.src.html
+++ b/index.src.html
@@ -11,6 +11,7 @@
     <meta property="og:description" content="Easily convert any webpage to an EPUB file with our free online tool. Just paste the URL and download your EPUB for offline reading on any device." />
     <meta property="og:image" content="https://webpagetoepub.github.io/img/og_image.png" />
     <meta property="og:url" content="https://webpagetoepub.github.io/" />
+    <link rel="canonical" href="https://webpagetoepub.github.io/" />
     <link rel="stylesheet" href="css/style.min.css" />
     <!-- Icons -->
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
