Add JSON-LD structured data

--- a/index.src.html
+++ b/index.src.html
@@ -22,6 +22,25 @@
     <link rel="mask-icon" href="/img/safari-pinned-tab.svg" color="#5bbad5" />
     <meta name="msapplication-TileColor" content="#00a300" />
     <meta name="theme-color" content="#ffffff" />
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "SoftwareApplication",
+        "name": "Convert webpage to EPUB",
+        "applicationCategory": "Utility",
+        "operatingSystem": "Web",
+        "description": "Easily convert any webpage to an EPUB file with our free online tool. Just paste the URL and download your EPUB for offline reading on any device.",
+        "version": "1.0.0",
+        "url": "https://webpagetoepub.github.io/",
+        "creator": {
+          "@type": "Person",
+          "name": "Carlson Santana Cruz",
+          "url": "https://github.com/carlsonsantana"
+        },
+        "license": "https://opensource.org/licenses/MIT",
+        "keywords": "HTML to EPUB, Page to EPUB, EPUB"
+      }
+    </script>
   </head>
   <body>
     <div class="container">
