--- a/index.src.html
+++ b/index.src.html
@@ -72,7 +72,7 @@
         </main>
       </div>
     </div>
-    <script src="js/script.min.js"></script>
+    <script src="js/script.min.js" defer></script>
     <script>
       if ('serviceWorker' in navigator) {
         navigator.serviceWorker.register('ws.js');
